--- a/src/styles/selector.less
+++ b/src/styles/selector.less
@@ -3,8 +3,8 @@
 iframe#adguard-assistant-dialog {
     position: fixed;
     clip: auto;
-    border-radius: 3px;
-    box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3);
+    border-radius: 8px;
+    box-shadow: 8px 8px 24px 0px rgba(0, 0, 0, 0.10);
     z-index: 2147483647;
     display: block!important;
 }
