--- a/src/templates/selectorMenu.html
+++ b/src/templates/selectorMenu.html
@@ -1,5 +1,9 @@
 <div class="main adguard_sg_ignore">
-    <div class="close adg-close" id="close-button"></div>
+    <div class="main_close adg-close" id="close-button">
+        <svg>
+            <use xlink:href="#icon-cross" />
+        </svg>
+    </div>
     <div class="head" id="drag-handle">
         <div i18n="assistant_select_element" class="head_title"></div>
         <div i18n="assistant_select_element_ext" class="head_text"></div>
