--- a/src/styles/base/buttons.less
+++ b/src/styles/base/buttons.less
@@ -4,59 +4,35 @@
 
 .btn {
     display: inline-block;
-    margin-bottom: 0;
-    padding: 10px 20px;
-    font-size: 13px;
-    line-height: 18px;
+    margin: 0;
+    padding: 18px 16px;
+    font-size: 16px;
+    line-height: 1.3;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
+    background-color: transparent;
     background-image: none;
     border: 1px solid transparent;
     white-space: nowrap;
     user-select: none;
+    border-radius: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 600;
+    transition: background .3s ease, color .3s ease, border-color .3s ease;
 
-    &:hover{
-        color: #000;
-        text-decoration: none;
-    }
-    &:active, &.active{
-        outline: none;
-    }
-    &:focus{
-        outline: none;
-        box-shadow: inset 0 0 0 1px #fff;
-    }
-    &[disabled], &.disabled{
+    &:disabled,
+    &[disabled],
+    &.disabled {
         cursor: default;
-        box-shadow: none;
-        opacity: .5;
         pointer-events: none;
     }
 }
 
 // Alternate buttons
 // --------------------------------------------------
-
-.btn-default {
-    border-color: @secondary-color;
-    background: @secondary-color;
-    color: #fff;
-    &:hover{
-        border-color: lighten(@secondary-color, 10%);
-        background: lighten(@secondary-color, 10%);
-        color: #fff;
-    }
-    &.active, &:active{
-        border-color: lighten(@secondary-color, 10%);
-        background: lighten(@secondary-color, 10%);
-    }
-    &.disabled, &[disabled]{
-        border-color: @secondary-color;
-        background: @secondary-color;
-    }
-}
 
 .btn-another-el {
     @media (max-width: @mobile){
