--- a/src/styles/base/fonts.less
+++ b/src/styles/base/fonts.less
@@ -3,16 +3,16 @@
 @import (inline) "fonts.css";
 
 .weight-regular {
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
     font-weight: 400;
 }
 
 .weight-medium {
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
     font-weight: 600;
 }
 
 .weight-bold {
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
     font-weight: 700;
 }
