--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -60,11 +60,13 @@ input[type="checkbox"]:focus {
 .form-control {
     display: block;
     width: 100%;
-    height: 40px;
-    padding: 6px 15px 4px;
-    font-size: 14px;
-    line-height: 22px;
-    box-shadow: inset 0 3px 3px fade(#000, 4);
+    padding: 16px;
+    font-size: 16px;
+    line-height: 1.3;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-radius: 8px;
+    border: 1px solid;
 
     // Customize the `:focus` state to imitate native WebKit styles.
     .form-control-focus();
