--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -1,29 +1,49 @@
+@import "palette";
+
 @bg-color: #ffffff;
 @bg-hover: #efefef;
 @bg-active: #f3f3f3;
 @bg-grey: #dfdfdf;
 @border-color: #e0dfdb;
 @text-main-color: #343434;
-@text-body-color: #282828;
 
 @basic-green: #36ba53;
-@dark-green: darken(@basic-green, 5%);
 
-@basic-red: #f3523d;
-@dark-red: darken(@basic-red, 10%);
-
-@advanced-settings-bg: #f4f4ef;
 @input-border: #cfcfcf;
 
 @close-image: url("../img/close.svg");
 
+// == Figma variables ==
+@text-main-text-main-default: @gray-80;
+@text-main-text-main-disabled: @gray-50;
+@text-description-description-default: @gray-70;
+@text-buttons-primary-default: @gray-0;
+
+@fills-backgrounds-cards-background-default: @gray-0;
+@fills-buttons-secondary-card-button-default: @gray-0;
+@fills-buttons-secondary-card-button-hovered: @gray-10;
+@fills-buttons-secondary-card-button-pressed: @gray-20;
+@fills-buttons-danger-button-default: @red-50;
+@fills-buttons-danger-button-hovered: @red-60;
+@fills-buttons-danger-button-pressed: @red-70;
+@fills-buttons-danger-button-disabled: @red-30;
+@fills-inputs-input-background-default: @gray-10;
+@fills-switch-all-off-default: @gray-40;
+@fills-switch-all-on-default: @product-primary-50;
+
+@stroke-dividers-item-divider-default: @gray-30;
+@stroke-buttons-secondary-default: @gray-80;
+@stroke-buttons-secondary-disabled: @gray-50;
+@stroke-icons-gray-icons-default: @gray-60;
+@stroke-icons-product-icon-default: @product-primary-50;
+@stroke-inputs-inactive-input-stroke-default: @gray-30;
 
 body {
-  color: @text-body-color;
+  color: @text-main-text-main-default;
 }
 
 .main {
-  background: @bg-color;
+  background: @fills-backgrounds-cards-background-default;
   &-popup {
     &__btn {
       background: @bg-color;
@@ -47,43 +67,41 @@ body {
   &-version {
     color: @bg-grey;
   }
+  &_close {
+    color: @stroke-icons-gray-icons-default;
+    &:hover {
+      color: @text-main-text-main-default;
+    }
+  }
 }
 
 .head {
   &_title {
-    color: @text-main-color;
+    color: @text-main-text-main-default;
   }
 
   &_text {
-    color: @text-main-color;
+    color: @text-description-description-default;
+  }
+
+  &::after {
+    background-color: @stroke-dividers-item-divider-default;
   }
 }
 
 .element-rule{
   &_expand-link{
-    &_txt{
-      color: @basic-green;
-      border-bottom: 1px solid @basic-green;
-    }
-    &:hover{
-      .element-rule_expand-link{
-        &_txt{
-          color: @basic-green;
-          border-bottom-color: @basic-green;
-        }
+    color: @text-main-text-main-default;
+    &_arr {
+      color: @stroke-icons-gray-icons-default;
+      .element-rule_expand-link:hover & {
+        color: @text-main-text-main-default;
       }
     }
   }
-  &_form-cont{
-    border-top: 1px solid @border-color;
-    background: @advanced-settings-bg;
+  &_text {
+    color: @text-description-description-default;
   }
-}
-
-.tick{
-  border: 20px solid @bg-color;
-  border-left: 1px solid @bg-color;
-  border-right: 1px solid @bg-color;
 }
 
 .close {
@@ -96,46 +114,30 @@ body {
 }
 
 .form-control {
-  color: @text-main-color;
-  background: @bg-color;
-  border: 1px solid @input-border;
+  color: @text-main-text-main-default;
+  background-color: @fills-inputs-input-background-default;
+  border-color: @stroke-inputs-inactive-input-stroke-default;
 }
 
 input[type="checkbox"] {
   & + .form-ui {
     .form-ui-txt {
-      &:before {
-        border: 1px solid @input-border;
-        background: @bg-color;
-      }
+      color: @text-main-text-main-default;
     }
-  }
-  &:checked {
-    & + .form-ui{
-      .form-ui-txt{
-        &:before{
-          border: 1px solid @basic-green;
-          background: @basic-green;
+    .form-ui-icon {
+        &--off {
+          color: @stroke-icons-gray-icons-default;
         }
-      }
-    }
-  }
-  &:checked {
-    & + .form-ui{
-      .form-ui-txt{
-        &:after{
-          border-bottom-color: @bg-color;
-          border-left-color: @bg-color;
+        // Note: On color is same for both light and dark modes
+        &--on {
+          color: @stroke-icons-product-icon-default;
         }
-      }
     }
   }
 }
 
 .menu,
-.menu-filter,
-.content,
-.foot {
+.menu-filter {
   border-top: 1px solid @border-color;
 }
 
@@ -146,46 +148,69 @@ input[type="checkbox"] {
 }
 
 .btn-primary {
-  border-color: @basic-green;
-  background: @basic-green;
-  color: #fff;
-  &:hover{
-    border-color: @dark-green;
-    background: @dark-green;
-    color: #fff;
+  color: @text-main-text-main-default;
+  background-color: @fills-buttons-secondary-card-button-default;
+  border-color: @fills-buttons-secondary-card-button-default;
+  &:hover,
+  &:focus-visible {
+    background-color: @fills-buttons-secondary-card-button-hovered;
+    border-color: @fills-buttons-secondary-card-button-hovered;
   }
-  &.active, &:active{
-    border-color: @dark-green;
-    background: @dark-green;
+  &:active,
+  &.active {
+    background-color: @fills-buttons-secondary-card-button-pressed;
+    border-color: @fills-buttons-secondary-card-button-pressed;
   }
-  &.disabled, &[disabled]{
-    border-color: @dark-green;
-    background: @dark-green;
+  &:disabled,
+  &[disabled],
+  &.disabled {
+    color: @text-main-text-main-disabled;
+    background-color: @fills-buttons-secondary-card-button-default;
+    border-color: @fills-buttons-secondary-card-button-default;
   }
 }
 
+// Note: Cancel button is same for both light and dark modes, except for disabled state
 .btn-cancel {
-  border-color: @basic-red;
-  background: @basic-red;
-  color: #fff;
-  &:hover{
-    border-color: @dark-red;
-    background: @dark-red;
-    color: #fff;
+  color: @text-buttons-primary-default;
+  background-color: @fills-buttons-danger-button-default;
+  border-color: @fills-buttons-danger-button-default;
+  &:hover,
+  &:focus-visible {
+    background-color: @fills-buttons-danger-button-hovered;
+    border-color: @fills-buttons-danger-button-hovered;
   }
-  &.active, &:active{
-    border-color: @dark-red;
-    background: @dark-red;
+  &:active,
+  &.active {
+    background-color: @fills-buttons-danger-button-pressed;
+    border-color: @fills-buttons-danger-button-pressed;
   }
-  &.disabled, &[disabled]{
-    border-color: @dark-red;
-    background: @dark-red;
+  &:disabled,
+  &[disabled],
+  &.disabled {
+    background-color: @fills-buttons-danger-button-disabled;
+    border-color: @fills-buttons-danger-button-disabled;
   }
 }
 
-.ui-slider-handle {
-  &:after{
-    background: @basic-green;
+.btn-default {
+  color: @text-main-text-main-default;
+  background-color: @fills-buttons-secondary-card-button-default;
+  border-color: @stroke-buttons-secondary-default;
+  &:hover,
+  &:focus-visible {
+    background-color: @fills-buttons-secondary-card-button-hovered;
+  }
+  &:active,
+  &.active {
+    background-color: @fills-buttons-secondary-card-button-pressed;
+  }
+  &:disabled,
+  &[disabled],
+  &.disabled {
+    color: @text-main-text-main-disabled;
+    background-color: @fills-buttons-secondary-card-button-default;
+    border-color: @stroke-buttons-secondary-disabled;
   }
 }
 
@@ -231,5 +256,20 @@ input[type="radio"] {
 .menu-filter {
   &_handle {
     background: @bg-color;
+  }
+}
+
+.adg-slide {
+  &_clue {
+    color: @text-main-text-main-default;
+  }
+  &_tick {
+    background-color: @fills-switch-all-off-default;
+  }
+  // Note: Active tick and handle background color is same for both light and dark modes
+  &_tick--active,
+  &_handle {
+    // Important to override dark mode value as media selector has more specificity
+    background-color: @fills-switch-all-on-default !important;
   }
 }
