--- a/src/styles/modules/layout.less
+++ b/src/styles/modules/layout.less
@@ -2,40 +2,72 @@
 
 .main {
     position: relative;
+
+    &--roboto {
+        font-family: "Roboto", "Open Sans", Arial, sans-serif;
+        font-weight: 400;
+    }
+
+    &_close {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        display: inline-block;
+        vertical-align: top;
+        width: 24px;
+        height: 24px;
+        line-height: 1;
+        cursor: pointer;
+        transition: color .3s ease;
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 .head {
-    padding: @base-offset - 2 @base-offset;
+    padding: 32px 32px 24px;
     cursor: move;
+    touch-action: none;
+    -ms-touch-action: none;
 
     &_title {
-        font-size: 16px;
+        font-size: 24px;
         font-weight: 700;
+        line-height: 1.2;
+        padding: 6px 0;
     }
 
     &_text {
-        margin: 4px 0 0;
-        font-size: 12px;
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        margin-top: 16px;
+        height: 1px;
+        width: 100%;
     }
 }
 
 .foot {
-    &:extend(.cf-mix all);
-    padding: @base-offset;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    row-gap: 16px;
+    padding: 0 32px 32px;
 
-    &_action {
-        float: right;
+    .btn {
+        width: 256px;
 
-        &_btn {
-            font-size: 0;
-
-            .btn + .btn {
-                margin-left: 10px;
-            }
+        &:nth-child(3) {
+            width: 328px;
+            margin: 0 auto;
         }
-    }
-
-    .cf {
-        clear: right;
     }
 }
