--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -1,10 +1,14 @@
 <div class="main">
-    <div class="close adg-close"></div>
+    <div class="main_close adg-close">
+        <svg>
+            <use xlink:href="#icon-cross" />
+        </svg>
+    </div>
     <div class="head head--slider">
         <div class="head_in head_in--slider">
             <div i18n="assistant_block_element" class="head_title head_title--slider" id="head_title"></div>
             <div class="element-rule_more element-rule_more--mobile">
-                <span class="element-rule_expand-link" id="ExtendedSettingsText"></span>
+                <span class="element-rule_expand-link" id="ExtendedSettingsTextMobile"></span>
                 <button i18n="assistant_block" type="button" class="btn btn-cancel" id="adg-accept"></button>
                 <button i18n="assistant_another_element" type="button" class="btn btn-default" id="adg-cancel"></button>
             </div>
@@ -15,19 +19,18 @@
         </div>
         <div i18n="assistant_block_element_explain" class="head_text head_text--mobile-h" id="head_text"></div>
     </div>
-    <div class="content" id="slider-area">
+    <div class="content">
         <div class="element-rule element-rule--slider">
             <div i18n="assistant_slider_explain" class="element-rule_text element-rule_text--slider"></div>
             <div class="element-rule_slider">
-                <div class="adg-slide" id="slider">
-                    <div class="adg-slide-clue-max">MAX</div>
-                    <div class="adg-slide-clue-min">MIN</div>
-                </div>
+                <div class="adg-slide" id="slider"></div>
             </div>
             <div class="element-rule_more">
                 <span class="element-rule_expand-link" id="ExtendedSettingsText">
                     <span i18n="assistant_extended_settings" class="element-rule_expand-link_txt"></span>
-                <span class="element-rule_expand-link_arr"></span>
+                    <svg class="element-rule_expand-link_arr">
+                        <use xlink:href="#icon-arrow-down" />
+                    </svg>
                 </span>
             </div>
             <div class="element-rule_form" id="advanced-settings">
@@ -35,18 +38,36 @@
                     <div class="element-rule_fieldset" id="one-domain-checkbox-block">
                         <input class="form-ui-control" id="one-domain-checkbox" type="checkbox" />
                         <label for="one-domain-checkbox" class="form-ui">
+                            <svg class="form-ui-icon form-ui-icon--off">
+                                <use xlink:href="#icon-checkbox-off" />
+                            </svg>
+                            <svg class="form-ui-icon form-ui-icon--on">
+                                <use xlink:href="#icon-checkbox-on" />
+                            </svg>
                             <span i18n="assistant_apply_rule_to_all_sites" class="form-ui-txt"></span>
                         </label>
                     </div>
                     <div style="display: none;" class="element-rule_fieldset" id="block-by-url-checkbox-block">
                         <input class="form-ui-control" id="block-by-url-checkbox" type="checkbox" />
                         <label for="block-by-url-checkbox" class="form-ui">
+                            <svg class="form-ui-icon form-ui-icon--off">
+                                <use xlink:href="#icon-checkbox-off" />
+                            </svg>
+                            <svg class="form-ui-icon form-ui-icon--on">
+                                <use xlink:href="#icon-checkbox-on" />
+                            </svg>
                             <span i18n="assistant_block_by_reference" class="form-ui-txt"></span>
                         </label>
                     </div>
                     <div style="display: none;" class="element-rule_fieldset" id="block-similar-checkbox-block">
                         <input class="form-ui-control" id="block-similar-checkbox" type="checkbox" />
                         <label for="block-similar-checkbox" class="form-ui">
+                            <svg class="form-ui-icon form-ui-icon--off">
+                                <use xlink:href="#icon-checkbox-off" />
+                            </svg>
+                            <svg class="form-ui-icon form-ui-icon--on">
+                                <use xlink:href="#icon-checkbox-on" />
+                            </svg>
                             <span i18n="assistant_block_similar" class="form-ui-txt"></span>
                         </label>
                     </div>
@@ -58,12 +79,8 @@
         </div>
     </div>
     <div class="foot foot--slider">
-        <button i18n="assistant_another_element" type="button" class="btn btn-default btn-another-el" id="adg-cancel"></button>
-        <div class="foot_action">
-            <div class="foot_action_btn">
-                <button i18n="assistant_preview" type="button" class="btn btn-primary" id="adg-preview"></button>
-                <button i18n="assistant_block" type="button" class="btn btn-cancel" id="adg-accept"></button>
-            </div>
-        </div>
+        <button i18n="assistant_block" type="button" class="btn btn-cancel" id="adg-accept"></button>
+        <button i18n="assistant_preview" type="button" class="btn btn-default" id="adg-preview"></button>
+        <button i18n="assistant_another_element" type="button" class="btn btn-primary btn-another-el" id="adg-cancel"></button>
     </div>
 </div>
