--- a/src/templates/settingsMenu.html
+++ b/src/templates/settingsMenu.html
@@ -1,9 +1,9 @@
 <div class="main">
     <div class="close"></div>
 
-    <div class="head">
-        <div i18n="assistant_settings" class="head_title"></div>
-        <div i18n="settings_choose_size_and_position" class="head_text head_text--mobile-h"></div>
+    <div class="old-head">
+        <div i18n="assistant_settings" class="old-head_title"></div>
+        <div i18n="settings_choose_size_and_position" class="old-head_text old-head_text--mobile-h"></div>
     </div>
 
     <div class="content">
@@ -96,11 +96,11 @@
         </div>
     </div>
 
-    <div class="foot">
-        <div class="foot_action">
-            <div class="foot_action_btn">
-                <button i18n="settings_cancel" class="btn btn-default" type="button" id="cancel"></button>
-                <button i18n="settings_save" class="btn btn-primary" type="button" id="save-settings"></button>
+    <div class="old-foot">
+        <div class="old-foot_action">
+            <div class="old-foot_action_btn">
+                <button i18n="settings_cancel" class="old-btn old-btn-default" type="button" id="cancel"></button>
+                <button i18n="settings_save" class="old-btn old-btn-primary" type="button" id="save-settings"></button>
             </div>
         </div>
         <div class="cf"></div>
