AG-44659 Fix arrow button direction
Merge in EXTENSIONS/assistant from fix/AG-44659 to master

Squashed commit of the following:

commit 1a5bbd390dc9b78f68632d67edcecc4c61880497
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Tue Feb 10 19:22:38 2026 +0300

    AG-44659 Fix arrow button direction

--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -29,7 +29,7 @@
                 <span class="element-rule_expand-link" id="ExtendedSettingsText">
                     <span i18n="assistant_extended_settings" class="element-rule_expand-link_txt"></span>
                     <svg class="element-rule_expand-link_arr">
-                        <use xlink:href="#icon-arrow-down" />
+                        <use xlink:href="#icon-arrow-up" />
                     </svg>
                 </span>
             </div>
