--- a/src/templates/svgIcons.html
+++ b/src/templates/svgIcons.html
@@ -21,6 +21,17 @@
         <path d="M18 16L12 10L6 16" />
     </symbol>
     <symbol
+        id="icon-arrow-up"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="1.5"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+    >
+        <path d="M6 8L12 14L18 8" />
+    </symbol>
+    <symbol
         id="icon-checkbox-off"
         viewBox="0 0 24 24"
         fill="none"
