AG-1016 Updated all packages to their latest stable versions, fixed migration issues
Merge in EXTENSIONS/assistant from enhance/AG-1016 to master

Squashed commit of the following:

commit e17f1db16b11708f18cc34c7ed70703d6c8b544e
Merge: a54eeb5 ee351fd
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Fri Feb 13 15:07:27 2026 +0300

    Merge branch 'master' into enhance/AG-1016

commit a54eeb50e4fc861618bd479e422c978979fba3b9
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Fri Feb 13 12:30:10 2026 +0300

    AG-1016 Update eslint and eslint conf, fix tests

commit e1d692c1018e7ae9c7a3bd46faa398309c94d6ef
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Thu Feb 12 14:46:03 2026 +0300

    AG-1016 Updated all packages to their latest stable versions, fixed migration issues

--- a/src/styles/base/fonts.less
+++ b/src/styles/base/fonts.less
@@ -2,17 +2,17 @@
 
 @import (inline) "fonts.css";
 
-.weight-regular {
+.weight-regular() {
     font-family: "Roboto", Arial, sans-serif;
     font-weight: 400;
 }
 
-.weight-medium {
+.weight-medium() {
     font-family: "Roboto", Arial, sans-serif;
     font-weight: 600;
 }
 
-.weight-bold {
+.weight-bold() {
     font-family: "Roboto", Arial, sans-serif;
     font-weight: 700;
 }
