--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -107,7 +107,7 @@
         background-position: 20px 50%;
         transition: 0.3s ease;
         padding: 0 20px 0 60px;
-        .ellipsis;
+        .ellipsis();
 
         &:hover {
             background-color: @assist-green02;
