--- a/src/styles/base/scaffolding.less
+++ b/src/styles/base/scaffolding.less
@@ -26,7 +26,7 @@ body {
     font-size: 1.3rem;
     line-height: 1.428571429;
     background-color: #e6e6e6;
-    .weight-regular;
+    .weight-regular();
     overflow-y: hidden;
 }
 
