AG-47127 Added dark theme for icon
Merge in EXTENSIONS/assistant from featureAG-47127 to master

Squashed commit of the following:

commit 111ea1996345312aa3dad732de4cb9cac625979d
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Mon Feb 16 10:16:47 2026 +0300

    AG-47127 Fix spaces

commit 05c97c48a383863c443fd13437b7c5f906e74037
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Fri Feb 13 16:53:41 2026 +0300

    AG-47127 Added dark theme for icon

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -110,3 +110,14 @@
 .adguard-assistant-button-bottom.adguard-assistant-button-respect-fb {
     transform: translate3d(-5px, -40px, 0);
 }
+
+@media (prefers-color-scheme: dark) {
+    .adguard-alert {
+        background-color: #1d2021 !important;
+        box-shadow: 0 0 10px 3px rgba(0, 0, 0, .3) !important;
+
+        &:hover {
+            background-color: #2c2f30 !important;
+        }
+    }
+}
